fix upload logo tournament
