# api/src/generated/swagger.json
@@ -418,6 +418,9 @@
 					"phone": {
 						"type": "string"
 					},
+					"avatar": {
+						"type": "string"
+					},
 					"email_verified": {
 						"type": "boolean"
 					},
@@ -434,6 +437,7 @@
 					"updated_at",
 					"email",
 					"phone",
+					"avatar",
 					"email_verified",
 					"email_verified_at"
 				],
@@ -2881,9 +2885,6 @@
 			},
 			"infer_typeofupdatePlayerSchema_": {
 				"properties": {
-					"avatar": {
-						"type": "string"
-					},
 					"nationality": {
 						"type": "string"
 					},
@@ -2907,6 +2908,9 @@
 							"midfielder",
 							"forward"
 						]
+					},
+					"avatar": {
+						"type": "string"
 					}
 				},
 				"type": "object"
@@ -5240,6 +5244,38 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"infer_typeofforgotPasswordSchema_": {
+				"properties": {
+					"email": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email"
+				],
+				"type": "object"
+			},
+			"ForgotPasswordDto": {
+				"$ref": "#/components/schemas/infer_typeofforgotPasswordSchema_"
+			},
+			"infer_typeofresetPasswordSchema_": {
+				"properties": {
+					"newPassword": {
+						"type": "string"
+					},
+					"token": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"newPassword",
+					"token"
+				],
+				"type": "object"
+			},
+			"ResetPasswordDto": {
+				"$ref": "#/components/schemas/infer_typeofresetPasswordSchema_"
+			},
 			"ArticleStatus": {
 				"type": "string",
 				"enum": [
@@ -6433,6 +6469,65 @@
 						}
 					}
 				]
+			}
+		},
+		"/users/{id}/avatar": {
+			"patch": {
+				"operationId": "UpdateAvatar",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SafeUser"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwt": [
+							"admin",
+							"user",
+							"organizing"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"avatar": {
+										"type": "string",
+										"format": "binary"
+									}
+								},
+								"required": [
+									"avatar"
+								]
+							}
+						}
+					}
+				}
 			}
 		},
 		"/upload/single": {
@@ -8808,9 +8903,6 @@
 										},
 										"player": {
 											"properties": {
-												"avatar": {
-													"type": "string"
-												},
 												"nationality": {
 													"type": "string"
 												},
@@ -8830,6 +8922,9 @@
 												"user_id": {
 													"type": "number",
 													"format": "double"
+												},
+												"avatar": {
+													"type": "string"
 												},
 												"deleted_at": {
 													"type": "string",
@@ -8852,13 +8947,13 @@
 												}
 											},
 											"required": [
-												"avatar",
 												"nationality",
 												"weight",
 												"height",
 												"date_of_birth",
 												"position",
 												"user_id",
+												"avatar",
 												"deleted_at",
 												"updated_at",
 												"created_at",
@@ -13186,6 +13281,56 @@
 					}
 				],
 				"parameters": []
+			}
+		},
+		"/auth/forgot-password": {
+			"post": {
+				"operationId": "ForgotPassword",
+				"responses": {
+					"204": {
+						"description": "OK"
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ForgotPasswordDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/reset-password": {
+			"post": {
+				"operationId": "ResetPassword",
+				"responses": {
+					"204": {
+						"description": "OK"
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ResetPasswordDto"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/articles": {
